--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "react-router-dom": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
